@@ -3,6 +3,7 @@ Version 4.xxxx (July xxth 2018)
 - Implemented: OpenZWave, support for Seismic Intensity sensor
 - Implemented: InfluxDB Data push, support for Username/Password
 - Fixed: Philips Hue, should work correctly now again
+- Updated: Dzvents (version 2.4.7, See dzVents/documentation/history.md)
 
 Version 4.9700 (June 23th 2018)
 - Implemented: Blockly, now possible to directly add/update Text devices
